--- a/app/styles/data.css
+++ b/app/styles/data.css
@@ -4,16 +4,17 @@
 .results-number {
 	display: inline;
 }
-.pamphlet-anchor {
-
+.pamphlet-anchor:hover > .pamphlet-container { /* applied styling as per md-whiteframe-12 */
+	box-shadow: 0 7px 8px -4px rgba(0,0,0,.2),0 12px 17px 2px rgba(0,0,0,.14),0 5px 22px 4px rgba(0,0,0,.12);
 }
 .pamphlet-container {
 	position: relative;
 	margin-bottom: 20px;
-	background-color: #fff;
+	background-color: #ffffff;
 	border: 0 solid transparent;
-	border-radius: 5px;
+	border-radius: 2px;
 	box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5);
+	padding: 5px;
 }
 
 .pamphlet-container .pamphlet-header {
@@ -29,46 +30,25 @@
 	border-bottom: 0 solid transparent;
 	border-top-right-radius: 3px;
 	border-top-left-radius: 3px;
-	/* for image zoom overflow is set to hidden */
-	overflow: hidden;
+	max-height: 140px;
 }
 
 .pamphlet-header-minHeight{
 	min-height: 230px;
 }
-.pamphlet-container .pamphlet-header img {
-	height: 100%;
+.pamphlet-container .pamphlet-header img,
+.pamphlet-container .pamphlet-header .vendor-cover-img {
 	width: 100%;
 	margin: auto;
+	height: 140px;
+    background-repeat: no-repeat;
+    background-size: cover;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
-	transform: scale(1,1);
-	transition: transform 0.5s 0s;
-	-webkit-transform: scale(1,1);
-	-webkit-transition: -webkit-transform 0.5s 0s;
-	-moz-transform: scale(1,1);
-	-moz-transition: -moz-transform 0.5s 0s;
-	-o-transform: scale(1,1);
-	-o-transition: -o-transform 0.5s 0s;
-	-ms-transform: scale(1,1);
-	-ms-transition: -ms-transform 0.5s 0s;
-}
-
-.pamphlet-container .pamphlet-header:hover img {
-	transform: scale(1.2,1.2);
-	transition: transform 0.5s 0s;
-	-webkit-transform: scale(1.2,1.2);
-	-webkit-transition: -webkit-transform 0.5s 0s;
-	-moz-transform: scale(1.2,1.2);
-	-moz-transition: -moz-transform 0.5s 0s;
-	-o-transform: scale(1.2,1.2);
-	-o-transition: -o-transform 0.5s 0s;
-	-ms-transform: scale(1.2,1.2);
-	-ms-transition: -ms-transform 0.5s 0s;
 }
 
 .pamphlet-container .pamphlet-body {
-	height: 60px;
+	height: 45px;
 	padding: 0px;
 }
 
@@ -105,13 +85,19 @@
 }
 
 .pamphlet-title-desc, .pamphlet-title-price{
-	line-height: 30px;
+	line-height: 22px;
 	color: #333333;
 	font-family: 'OpenSans-Semibold';
 }
 
 .pamphlet-title-price{
-	/*font-size: 22px;*/
+	font-size: 14px;
+	position: absolute;
+    right: 6px;
+    bottom: 51px;
+    background: rgba(0,0,0,0.3);
+    color: white;
+    padding: 0px 5px;
 }
 
 .venue-capacity-heading{
@@ -134,10 +120,13 @@
 	width: 100%;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	font-size: 13px;
+	letter-spacing: 1px;
 }
 
 .pamphlet-title-city{
 	font-family: 'OpenSans-Regular';
+	text-transform: uppercase;
 }
 
 .border-left-1px{
@@ -145,8 +134,8 @@
 }
 
 .featured-ribbon {
-width: 168px;
-height: 32px;
+width: 120px;
+height: 20px;
 	background: rgba(243,114,82,0.9);
     z-index: 1;
     position: absolute;
@@ -159,19 +148,33 @@ height: 32px;
 .featured-ribbon .featured-ribbon-text{
 	display: table-cell;
 	vertical-align: middle;
+	font-size: 12px;
 }
 
 .featured-ribbon:after{
 	position: absolute;
 	content: '';
-	border: 16px solid rgba(243,114,82,0.9);
+	border: 10px solid rgba(243,114,82,0.9);
 	border-right-color: transparent;
-	left: 168px;
+	left: 120px;
 }
 
 
 .filter-btn {
-	background-color: #ee3e20 !important;
+background-color: #ee3e20 !important;
+    color: #ffffff !important;
+    overflow: visible !important;
+    width: 51px !important;
+    height: 51px !important;
+    line-height: 51px !important;
+}
+
+.clear-btn {
+	background-color: #ffffff !important;
+	overflow: visible !important;
+	    width: 51px !important;
+    height: 51px !important;
+    line-height: 51px !important;
 }
 
 .reset-btn {
@@ -235,4 +238,29 @@ height: 32px;
 .data-page-breadcrumb > ul > li > a:focus{
 	color: #000000;	
 	text-decoration: underline;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+
+	.pamphlet-header{
+		max-height: 187px;
+	}	
+	.vendor-cover-img{
+		height: 187px;
+	}
+	.pamphlet-container{
+		overflow: hidden;
+	}
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	
+	.pamphlet-header{
+		max-height: 164px;
+	}
+	.vendor-cover-img{
+		height: 164px;
+	}	
+	
 }
