--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -4,9 +4,7 @@
       <a href='/' class="footer-logo-anchor">
       <span class="logo"><img class="img" src="/images/lp_main_logo.png" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"/></span>
       </a>
-      <div class="h3">Welcome to LePartycious</div>
-      <p class="info">We are an online platform for providing information about various vendors- venues, caterers, photographers, decorators who are capable of making your party a huge success. So if you want to host a party, just let us know how you want your party to be and we will provide you vendors that suits your requirement and budget.</p>
-      <p class="connect">Connect With Us</p>
+      <p class="info">An online Marketplace for searching vendors that suits your requirements and budget.</p>
       <ul class="social">
          <li>
             <a target="_blank" href="https://www.facebook.com/LePartycious" title="facebook">
@@ -30,7 +28,7 @@
          </li>
       </ul>
    </div>
-   <div class="col-xs-12 col-sm-6 col-md-2 col-md-offset-1">
+   <div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-1">
       <div class="h4"> COMPANY</div>
       <div class="row">
          <div class="col-xs-12">
@@ -44,6 +42,15 @@
                <a href="/faq">
                   <li>FAQs</li>
                </a>
+               <a href="/disclaimer">
+                  <li>Disclaimer</li>
+               </a>
+               <a href="/privacy-policy">
+                  <li>Privacy Policy</li>
+               </a>
+               <a href="/terms-of-use">
+                  <li>Terms of Use</li>
+               </a>
                <!--
                <a href="#">
                                  <li>T & C</li>
@@ -53,8 +60,8 @@
          </div>
       </div>
    </div>
-   <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="h4">NEED HELP?</div>
+   <div class="col-xs-6 col-sm-3 col-md-3">
+      <div class="h4">CONTACT</div>
       <ul>
          <li>Call us on</li>
          <a href='tel:+917222034001'><li itemprop="telephone">
