--- a/app/styles/detail.css
+++ b/app/styles/detail.css
@@ -843,14 +843,19 @@ ul.details-page-social-section {
 	}
 
 	.details-container h2.details-name {
-		color: #000000;
+		/*color: #000000;*/
+	}
+	
+	.details-container{
+		padding-top: 0em;
+		margin-top: -15px;
 	}
 
 	.details-basicinfo-contnr {
-		background: rgba(255,255,255,1);
+		/*background: rgba(255,255,255,1);
 		border-radius: 5px;
-		box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5);
-		color: #656565;
+		box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5);*/
+		color: #ffffff;
 	}
 	
 	.details-basicinfo-right-panel{
@@ -859,6 +864,7 @@ ul.details-page-social-section {
 
 	.details-container .details-telephone a {
 		color: #337ab7;
+		text-decoration: underline;
 	}
 	
 	.detail-category-icon-contnr{
