--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -39,11 +39,17 @@ html, body {
 	font-family: 'OpenSans-Regular', sans serif !important;
 	font-size: 14px;
 	overflow-x: hidden;
+	overflow-y: auto;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-o-user-select: none;
 	-ms-user-select: none;
 	-webkit-touch-callout: none !important; 
+	height: auto; /* angular-material override */
+}
+
+body.height100{
+
 }
 
 input:focus{
@@ -184,6 +190,10 @@ blockquote:after{
 	float: none;
 }
 
+.text-start{
+	text-align: start;
+}
+
 .form-group .required:after {
 	content: "*";
 	color: brown;
@@ -216,7 +226,7 @@ blockquote:after{
 
 .default-theme-btn {
 	color: #ffffff;
-	background-color: rgba(243,114,84,0.8);
+	background-color: rgba(238,62,32,0.8);
 	font-weight: 600;
 	text-align: center;
 	-ms-touch-action: manipulation;
@@ -229,7 +239,7 @@ blockquote:after{
 
 .default-theme-btn:hover, .default-theme-btn:focus {
 color: #ffffff;
-	background-color: rgba(243,114,84,0.8);
+	background-color: rgba(238,62,32,0.8);
 }
 
 .float-right{
@@ -253,7 +263,16 @@ color: #ffffff;
     padding: 55px 0;
 }
 
-#footer a {
+#globalSideNavSocial{
+	padding: 30px 5px;
+	}
+
+.global-side-nav{
+	position: fixed;	
+}	
+
+#footer a,
+#globalSideNavSocial a {
 	color: #fff;
 	text-decoration: none;
 	    display: block;
@@ -275,26 +294,31 @@ color: #ffffff;
 	font-weight: 400;
 }
 
-p.info, p.connect {
+p.info {
 	font-size: 14px;
+	margin-top: 8px;
 }
 
-#footer ul li {
+#footer ul li,
+#globalSideNavSocial ul li {
 	padding-top: 10px;
 }
 
-#footer ul {
+#footer ul,
+#globalSideNavSocial ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
-#footer .social li {
+#footer .social li,
+#globalSideNavSocial .social li {
 	padding-right: 20px;
 	display: inline-block;
 }
 
-#footer .social li span{
+#footer .social li span,
+#globalSideNavSocial .social li span{
 	color: #ffffff;
     line-height: 2.3;
     font-size: 22px;
@@ -319,7 +343,28 @@ p.info, p.connect {
     -ms-transition: -ms-transform 0.5s;
 }
 
-#footer .social li span:hover{
+#globalSideNavSocial .social li span{
+	color: #98a2ab;
+	border: 1px solid #98a2ab;
+}
+
+
+.globalSideNav-main-content,
+.globalSideNav-main-content md-icon{
+	color: #98a2ab;
+}
+
+.globalSideNav-main-content a:hover span,
+.globalSideNav-main-content a:hover md-icon{
+	color: #23527c; 
+}
+
+.global-nav-header{
+	text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+#footer .social li span:hover,
+#globalSideNavSocial .social li span:hover{
 	-webkit-transform: rotateZ(360deg);
 	-webkit-transition: -webkit-transform 0.5s;
 		-moz-transform: rotateZ(360deg);
@@ -328,6 +373,11 @@ p.info, p.connect {
 	-o-transition: -o-transform 0.5s;
 		-ms-transform: rotateZ(360deg);
 	-ms-transition: -ms-transform 0.5s;
+}
+
+#globalSideNavSocial .social li span:hover{
+	color: #ffffff;
+	border: 1px solid #ffffff;
 }
 
 .social a:hover span.fa-facebook {
@@ -414,10 +464,23 @@ p.info, p.connect {
     border-color: #f15633;
 }
 
-.lp-header-navbar-nav > li > a {
+.lp-header-navbar-nav > li > a,
+.lp-header-navbar-nav > li > div {
     padding-top: 30px;
     padding-bottom: 30px;
         border-top: 0px !important;
+}
+
+.header-city-contnr{
+	    width: 100%;
+    padding: 7px 5px;
+    border: none;
+    outline: none;
+    background: #ffffff;
+    cursor: text;
+    color: #666666;
+    border-radius: 2px;
+    font-size: 13px;	
 }
 
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
@@ -489,7 +552,7 @@ p.info, p.connect {
 span.lp-selected-city:empty::before {
     content: 'Choose City';
     display: inline-block;
-    font-size: 16px;
+    font-size: 13px;
 }
 
 span.lp-selected-category:empty::before{
@@ -585,8 +648,7 @@ background: white;
 
 .location-icon{
 	color: #ee3e20;
-	font-size: 20px;
-	line-height: 46px;
+	font-size: 16px;
 }
 
 
@@ -811,11 +873,147 @@ background: white;
 	text-decoration: underline;
 }
 
+/* Styling for directive template tile Component */
+.tile-comp-container{
+	display: inline-block;
+	margin: 2px 2px 2px 0;
+}
+
+.tile-comp-container a{
+	display: block;
+	position: relative;
+}
+
+.tile-comp-container .overlay_and_text{
+	display: inline;
+    position: absolute;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background: rgba(0,0,0,0.6);
+    color: #ffffff;
+    font-size: 18px;
+    padding-top: 25%;
+}
+
+.tile-comp-container .subcategory-name{
+	    position: absolute;
+    left: 0px;
+    bottom: 10px;
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+.tiles-comp-container{
+	max-width: 820px;
+    display: inline-block;
+}
+
+.mixed-subcategories-contnr{
+	text-align: center;
+}
+
+/* custom header styling */
+.navbar-header{
+	float: none;
+}
+
+.lp-custom-header {
+	float: right;
+    height: 100%;
+    position: relative;
+    padding: 15px;
+    
+}
+
+.lp-custom-header ul{
+	 position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}	
+
+.lp-custom-header ul li{
+	float: left;
+}
+
+/* global side navigation override */
+md-backdrop.md-sidenav-backdrop,
+.global-side-nav{
+	z-index: 1031;
+}
+
+.md-dialog-container{
+	z-index: 1032;
+}
+
+.md-select-menu-container{
+    z-index: 1032; /*done because of city dropdown in md-dialog*/
+}
+
+.md-scroll-mask{
+	/*z-index: 1031;*/
+}
+
+md-backdrop.md-dialog-backdrop{
+	z-index: 1031;
+}
+
+md-autocomplete{
+	color: #656565;
+}
+
+.vendor-type-dropdown{
+	background: white;
+    margin: 0px -15px;
+    border-radius: 2px;
+    min-height: 60px;
+    color: #656565;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.vendor-name-autocomplete{
+	    min-height: 60px;
+    margin-left: -15px;
+    margin-right: -15px;
+    border-radius: 0px;
+}
+
+.vendor-search-button{
+	background: #ee3e20 !important;
+    min-height: 60px;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-radius: 2px;
+        border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    display: block;
+}
+
+md-autocomplete md-autocomplete-wrap{
+	height: 100%;
+}
+
+md-autocomplete input:not(.md-input){
+	height: 100%;
+}
+
 
 @media only screen and (max-width: 767px) and (min-width: 0)
 {.navbar-brand {
     float: left;
-    padding: 0px 10px;
+    padding-left: 10px;
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     font-size: 12px;
     line-height: 1;
     height: 50px;
@@ -836,6 +1034,45 @@ background: white;
 	text-decoration: underline;
 }
 
+.global_menu_button{
+	min-height: initial;
+	min-width: initial;
+	margin: 0px 0px;
+}
+
+.location-button{
+	margin: 0px 0px;
+	max-width: 122px;
+}
+
+.lp-custom-header {
+
+    padding: 3px;
+    padding-top: 12px;
+    
+}
+
+.vendor-name-autocomplete{
+	border-radius: 2px;
+}
+
+.vendor-type-dropdown{
+	    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.vendor-search-button{
+	        border-bottom-left-radius: 2px;
+    border-top-left-radius: 2px;
+}
+
+#footer .social li, #globalSideNavSocial .social li{
+	padding-right: 15px;
+}
+
+ #globalSideNavSocial .social li{
+ 	padding-right: 5px;
+ }
 }
 
 @media only screen and (min-width: 767px)
@@ -865,16 +1102,27 @@ background: white;
 		top: 66px;
 		z-index: 111;
 	}
-	/*
-	.nav:after {
-			content: '';
-			position: absolute;
-			right: 18px;
-			top: -9px;
-			border-left: 10px solid rgba(0, 0, 0, 0);
-			border-right: 10px solid rgba(0, 0, 0, 0);
-			border-bottom: 10px solid rgba(73, 84, 91, 0.87);
-		}*/
+	.social a span.fa-facebook {
+    background: #3b5998;
+}
+
+.social a span.fa-twitter {
+    background: #55acee;
+}
+
+.social a span.fa-youtube {
+    background: rgb(255, 0, 51);
+}
+
+.social a span.fa-instagram {
+    background: rgb(136, 142, 153);
+}
+
+#globalSideNavSocial .social li span{
+	color: #ffffff;
+    border: 1px solid #ffffff;
+}
+
 	
 	.menu li a span.messages {
 		text-align: center;
