--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -30,33 +30,36 @@
 			</div>
 			
 	
-		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-md-6 col-xs-12 col-sm-12 data-page-record'>
+		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-xs-offset-1 col-sm-offset-0 col-md-4 col-xs-10 col-sm-6 data-page-record'>
 					
 					
 					
 						<a href="" ng-click="vm.fetchDetails(result.name);" class="pamphlet-anchor">
 						<div class="pamphlet-container">
-							<div class="pamphlet-header pamphlet-header-minHeight">
-									<div class="featured-ribbon"><span class="featured-ribbon-text">LEPARTYCIOUS</span></div>
-								<img src="{{vm.getImageURL(result.mainImagerURL)}}" alt='cover-photo' class="vertical-center"></img>
+							<div class="pamphlet-header"> <!-- Removed the class for min-height(pamphlet-header-minHeight) -->
+									<div class="featured-ribbon"><span class="featured-ribbon-text">HAND PICKED</span></div>
+								<!--<img src="{{vm.getImageURL(result.mainImagerURL)}}" alt='cover-photo' class="vertical-center"></img>-->
+								<div class="vendor-cover-img" style="background-image: url('{{vm.getImageURL(result.mainImagerURL)}}')" class="vertical-center"></div>
+								<div class="pamphlet-title-price" ng-if="result.startingPrice"><span class="fa fa-fw fa-inr"></span>{{result.startingPrice}}</div>
+								<div class="pamphlet-title-price" ng-if="!result.startingPrice">Get Quote</div>
 
 							</div>
 							<div class="pamphlet-body">
 								<div class="pamphlet-title col-xs-12 text-center">
 									<div class="row">
-									<div class="col-xs-8 text-left pamphlet-title-desc" ng-if="vm.selectedCategory == 'VENUE'"><div title="{{result.name}}, {{result.locality}}">{{result.name}}, {{result.locality}}</div><!--<span class="pamphlet-title-city">{{result.locality}}</span>-->
-									<div class="venue-gathering"><span class="venue-capacity-heading">SEATING CAPACITY</span><span class="venue-gathering-range"> {{result.minCapacity}}-{{result.maxCapacity}}</span></div>
+									<div class="col-xs-12 text-left pamphlet-title-desc" ng-if="vm.selectedCategory == 'VENUE'"><div title="{{result.name}}, {{result.locality}}" class="theme-color" style="font-size: 15px;">{{result.name}}</div><div class="pamphlet-title-city">{{result.locality}}</div>
+									<!--<div class="venue-gathering"><span class="venue-capacity-heading">SEATING CAPACITY</span><span class="venue-gathering-range"> {{result.minCapacity}}-{{result.maxCapacity}}</span></div>-->
 <!--
 									<span class="caterer-category veg-only pull-right" ng-if="vm.selectedCategory == 'CATERER' && result.isPureVeg"><span class="fa fw fa-dot-circle-o"></span><span class="caterer-category-veg"> veg only</span></span>
 									<span class="caterer-category veg-nonveg pull-right" ng-if="vm.selectedCategory == 'CATERER' && !result.isPureVeg"><span class="fa fw fa-dot-circle-o"></span><span class="caterer-category-nonveg"> veg/non-veg</span></span>-->
 
 									
 									</div>
-									<div class="col-xs-8 text-left pamphlet-title-desc" ng-if="vm.selectedCategory != 'VENUE'"><div>{{result.name}}</div><span class="pamphlet-title-city">{{result.locality}}</span>
+									<div class="col-xs-12 text-left pamphlet-title-desc" ng-if="vm.selectedCategory != 'VENUE'"><div title="{{result.name}}, {{result.locality}}" class="theme-color" style="font-size: 15px;">{{result.name}}</div><div class="pamphlet-title-city">{{result.locality}}</div>
 									
 									</div>
-									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory == 'CATERER' || vm.selectedCategory == 'VENUE'"><div class="pamphlet-plate-price">PRICE PER PLATE</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate rateLargeFont">{{result.startingPrice}}</span></div>
-									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory != 'CATERER' && vm.selectedCategory != 'VENUE'"><div class="pamphlet-plate-price">STARTS FROM</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate">{{result.startingPrice}}</span></div>
+									<!--<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory == 'CATERER' || vm.selectedCategory == 'VENUE'"><div class="pamphlet-plate-price">PRICE PER PLATE</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate rateLargeFont">{{result.startingPrice}}</span></div>
+									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory != 'CATERER' && vm.selectedCategory != 'VENUE'"><div class="pamphlet-plate-price">STARTS FROM</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate">{{result.startingPrice}}</span></div>-->
 								</div>
 								</div>
 							</div>
