--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -1,32 +1,39 @@
 <nav id="navbar" class="navbar navbar-fixed-top navbar-default navbar-inverse">
 	<div class="container-fluid">
-	<div class="navbar-header">
-		
-		<!--
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							</button>-->
-		
-		
-			<a class="navbar-brand" href="/">
-				<img src="/images/lp_logo.png" height="60px;" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"></a>
-				
-				
-				</div><!-- Collect the nav links, forms, and other content for toggling -->
-				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					
-					<ul class="nav navbar-nav">
-											<li class="active h3"><a href="#"></a></li>
-											</ul>
-					
-						<!--
-						<ul class="nav navbar-nav navbar-right lp-header-navbar-nav">
-													<li><a href="javascript:void(0)" ng-click="vm.showSignInPopup();">SIGN IN</a></li>
-												</ul>-->
-						</div>
-					</div>
-				</nav>
+		<div class="navbar-header">
+
+			<a class="navbar-brand" href="/"> <img src="/images/lp_logo.png" height="60px;" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"></a>
+
+			<!-- Custom Header Elements -->
+			<div class="lp-custom-header">
+				<ul>
+					<li>
+						<md-button class="md-raised location-button" ng-click="vm.openCityDialog($event)">
+							<span class="lp-selected-city">{{vm.citiesList[vm.selectedCity]}}</span>
+							<span class="fa fa-fw fa-map-marker location-icon"></span>
+						</md-button>
+					</li>
+					<li class="hidden-xs">
+						<md-button style="color: white;">
+							SIGN IN
+						</md-button>
+					</li>
+					<li class="hidden-xs">
+						<md-button style="color: white;">
+							SIGN UP
+						</md-button>
+					</li>
+					<li>
+						<md-button ng-click="vm.toggleRight();" class="global_menu_button md-icon-button">
+							<md-icon md-font-library="material-icons" style="color: white;">
+								menu
+							</md-icon>
+						</md-button>
+
+					</li>
+				</ul>
+			</div>
+
+		</div>
+	</div>
+</nav>
