--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -123,8 +123,38 @@
 				Small things, large impact
 			</p>
 		</div>
+			<div class="col-xs-12 text-center home-page-icons">
+			<div>
+				<span class="lp-event-icon lp-sprite"></span>
+			</div>
+			<h3>YOUR EVENT</h3>
+			<p>
+				A success story
+			</p>
+		</div>
 	</div>
 </section>
+
+<!-- How it works section -->
+<section class="row howitworks-section">
+	<div class="container text-center">
+		<div class="h2 theme-color">
+			HOW IT WORKS
+
+			<hr>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4 marginBottom20">
+			<div class="howitworks-step1" md-whiteframe="4"></div>
+		</div>	
+		<div class="col-xs-12 col-sm-6 col-md-4 marginBottom20">
+			<div class="howitworks-step2" md-whiteframe="4"></div>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-0 marginBottom20">
+			<div class="howitworks-step3" md-whiteframe="4"></div>
+		</div>
+	</div>
+</section>
+
 
 <!-- feedback section starts -->
 <div class="container feedback_section">
@@ -201,6 +231,7 @@
 	<div class="h2 theme-color-white">
 		OUR PORTFOLIO
 		
+		<hr>
 	</div>
 	<!-- Slider main container -->
 	<div class="swiper-container portfolio-swiper-container" swiper-carousel initial-slide="2" effect="coverflow" grab-cursor="true" centered-slides="true" slides-per-view="auto" next-button="portfolio-swiper-button-next" prev-button="portfolio-swiper-button-prev" preload-images="false" lazy-loading="true" space-between="20" coverflow="vm.showcaseSwiperCoverflow">
